# qt4_face_rec_ver_demo

./: CMakeLists.txt  README.md
gui/: imageviewer.cpp  imageviewer.h  mainwidget.cpp  mainwidget.h  mainwindow.cpp  mainwindow.h
include/: config.h  face_align.h  face_recognition.hpp  face_repository.hpp
src/: camera.cpp  camera.h  face_align.cpp  face_align.h  face_processor.cpp  face_processor.h  face_rep_utils.cpp  face_rep_utils.h  lfw_test.cpp  main.cpp  settings.h  test.cpp
